--- a/index.html
+++ b/index.html
@@ -13,100 +13,42 @@
 <body>
   <header>
     <aside class="sidebar">
-      <div class="container"></div>
-
+      <div class="brand">
+        <i class="fab fa-spotify"></i>
+        <span>SPOTIFY</span>
+      </div>
+      <div class="icons-sidebar">
+        <div class="menu-sidebar">
+          <i class="fas fa-home"></i>
+          <a href="#">Home</a>
+        </div>
+        <div class="menu-sidebar">
+          <i class="fas fa-search"></i>
+          <a href="#">Cerca</a>
+        </div>
+        <div class="menu-sidebar">
+          <i class="fas fa-book-open"></i>
+          <a href="#">La tua libreria</a>
+        </div>
+      </div>
+      <div class="playlist">
+        <ul>
+          <li id="title-play"><b>Playlist</b></li>
+          <li id="crea"><i class="fas fa-plus-square"></i><b>Crea Playlist</b></li>
+          <li>Nome Playlist</li>
+          <li>Nome Playlist</li>
+          <li>Nome Playlist</li>
+          <li>Nome Playlist</li>
+          <li>Nome Playlist</li>
+          <li>Nome Playlist</li>
+          <li>Nome Playlist</li>
+        </ul>
+      </div>
     </aside>
   </header>
   <main>
-    <div class="prova">
-      <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p><p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p><p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
-  <p>Test</p>
+    <div class="container-fluid main-page">
+
     </div>
   </main>
   <footer>
