--- a/index.html
+++ b/index.html
@@ -12,47 +12,75 @@
 </head>
 <body>
   <header>
-    <aside class="sidebar">
-      <div class="brand">
-        <i class="fab fa-spotify"></i>
-        <span>SPOTIFY</span>
-      </div>
-      <div class="icons-sidebar">
-        <div class="menu-sidebar">
-          <i class="fas fa-home"></i>
-          <a href="#">Home</a>
-        </div>
-        <div class="menu-sidebar">
-          <i class="fas fa-search"></i>
-          <a href="#">Cerca</a>
-        </div>
-        <div class="menu-sidebar">
-          <i class="fas fa-book-open"></i>
-          <a href="#">La tua libreria</a>
-        </div>
-      </div>
-      <div class="playlist">
-        <ul>
-          <li id="title-play"><b>Playlist</b></li>
-          <li id="crea"><i class="fas fa-plus-square"></i><b>Crea Playlist</b></li>
-          <li>Nome Playlist</li>
-          <li>Nome Playlist</li>
-          <li>Nome Playlist</li>
-          <li>Nome Playlist</li>
-          <li>Nome Playlist</li>
-          <li>Nome Playlist</li>
-          <li>Nome Playlist</li>
-        </ul>
-      </div>
-    </aside>
   </header>
   <main>
-    <div class="container-fluid main-page">
+    <div class="container-fluid">
+      <div class="row">
+        <aside class="col-xs-2 col-sm-4 col-md-3 col-lg-3 sidebar">
+          <div class="container-sidebar">
+            <div class="brand">
+              <i class="fab fa-spotify"></i>
+              <span>SPOTIFY</span>
+            </div>
+            <div class="icons-sidebar">
+              <div class="menu-sidebar">
+                <i class="fas fa-home"></i>
+                <a href="#">Home</a>
+              </div>
+              <div class="menu-sidebar">
+                <i class="fas fa-search"></i>
+                <a href="#">Cerca</a>
+              </div>
+              <div class="menu-sidebar">
+                <i class="fas fa-book-open"></i>
+                <a href="#">La tua libreria</a>
+              </div>
+            </div>
+            <div class="playlist">
+              <ul>
+                <li id="title-play"><b>Playlist</b></li>
+                <li id="crea"><i class="fas fa-plus-square"></i><b>Crea Playlist</b></li>
+                <li>Slipknot Claudio</li>
+                <li>Red Hot Chili Peppers Claudio</li>
+                <li>This is Creedence Clearwat...</li>
+                <li>Wake the fuck up Samurai</li>
+                <li>This is Refused</li>
+                <li>Chill Rock</li>
+                <li>This is Eluvetie</li>
+              </ul>
+            </div>
+            <div class="footer-sidebar">
+              <div class="ft-side1">
+                <i class="far fa-arrow-alt-circle-down"></i>
+                <span>Installa App</span>
+              </div>
+              <hr>
+              <div class="ft-side2">
+                <i class="far fa-user-circle"></i>
+                <span><b>Claud-Car</b></span>
+              </div>
+            </div>
+          </div>
 
+        </aside>
+        <div class="col-xs-10 col-sm-8 col-md-9 col-lg-9 main-page">
+
+        </div>
+      </div>
     </div>
   </main>
   <footer>
-    <div class="player-bar"></div>
+    <div class="player-bar">
+      <div class="col-xs-4 col-sm-3 left-part">
+        <img src="./assets/img/nero-forte.png" alt="">
+        <div class="song">
+          <a><b>Nero Forte</b><i class="far fa-heart"></a></i><br>
+          <a>Slipknot</a>
+        </div>
+      </div>
+      <div class="col-xs-4 col-sm-6 central-part"></div>
+      <div class="col-xs-4 col-sm-3 right-part"></div>
+    </div>
   </footer>
 
 
