proseguimento esercizio,player terminato

--- a/index.html
+++ b/index.html
@@ -78,8 +78,26 @@
           <a>Slipknot</a>
         </div>
       </div>
-      <div class="col-xs-4 col-sm-6 central-part"></div>
-      <div class="col-xs-4 col-sm-3 right-part"></div>
+      <div class="col-xs-4 col-sm-6 central-part">
+        <div class="upper-player">
+          <i class="fas fa-random symb-15px"></i>
+          <i class="fas fa-step-backward symb-18px"></i>
+          <i class="far fa-play-circle"></i>
+          <i class="fas fa-step-forward symb-18px"></i>
+          <i class="fas fa-redo-alt symb-15px"></i>
+        </div>
+        <div class="lower-player">
+          <span>0:35</span>
+          <hr>
+          <span>5:25</span>
+        </div>
+      </div>
+      <div class="col-xs-4 col-sm-3 right-part">
+        <i class="fas fa-sliders-h"></i>
+        <i class="fas fa-desktop"></i>
+        <i class="fas fa-volume-up"></i>
+        <hr>
+      </div>
     </div>
   </footer>
 
