--- a/index.html
+++ b/index.html
@@ -14,60 +14,91 @@
   <header>
   </header>
   <main>
-    <div class="container-fluid">
-      <div class="row">
-        <aside class="col-xs-2 col-sm-4 col-md-3 col-lg-3 sidebar">
-          <div class="container-sidebar">
-            <div class="brand">
-              <i class="fab fa-spotify"></i>
-              <span>SPOTIFY</span>
+      <aside class="col-xs-2 col-sm-4 col-md-3 col-lg-3 sidebar">
+        <div class="container-sidebar">
+          <div class="brand">
+            <i class="fab fa-spotify"></i>
+            <span>SPOTIFY</span>
+          </div>
+          <div class="icons-sidebar">
+            <div class="menu-sidebar">
+              <i class="fas fa-home"></i>
+              <a href="#">Home</a>
             </div>
-            <div class="icons-sidebar">
-              <div class="menu-sidebar">
-                <i class="fas fa-home"></i>
-                <a href="#">Home</a>
-              </div>
-              <div class="menu-sidebar">
-                <i class="fas fa-search"></i>
-                <a href="#">Cerca</a>
-              </div>
-              <div class="menu-sidebar">
-                <i class="fas fa-book-open"></i>
-                <a href="#">La tua libreria</a>
-              </div>
+            <div class="menu-sidebar">
+              <i class="fas fa-search"></i>
+              <a href="#">Cerca</a>
             </div>
-            <div class="playlist">
-              <ul>
-                <li id="title-play"><b>Playlist</b></li>
-                <li id="crea"><i class="fas fa-plus-square"></i><b>Crea Playlist</b></li>
-                <li>Slipknot Claudio</li>
-                <li>Red Hot Chili Peppers Claudio</li>
-                <li>This is Creedence Clearwat...</li>
-                <li>Wake the fuck up Samurai</li>
-                <li>This is Refused</li>
-                <li>Chill Rock</li>
-                <li>This is Eluvetie</li>
-              </ul>
-            </div>
-            <div class="footer-sidebar">
-              <div class="ft-side1">
-                <i class="far fa-arrow-alt-circle-down"></i>
-                <span>Installa App</span>
-              </div>
-              <hr>
-              <div class="ft-side2">
-                <i class="far fa-user-circle"></i>
-                <span><b>Claud-Car</b></span>
-              </div>
+            <div class="menu-sidebar">
+              <i class="fas fa-book-open"></i>
+              <a href="#">La tua libreria</a>
             </div>
           </div>
-
-        </aside>
-        <div class="col-xs-10 col-sm-8 col-md-9 col-lg-9 main-page">
-
+          <div class="playlist">
+            <ul>
+              <li id="title-play"><b>Playlist</b></li>
+              <li id="crea"><i class="fas fa-plus-square"></i><b>Crea Playlist</b></li>
+              <li>Slipknot Claudio</li>
+              <li>Red Hot Chili Peppers Claudio</li>
+              <li>This is Creedence Clearwat...</li>
+              <li>Wake the fuck up Samurai</li>
+              <li>This is Refused</li>
+              <li>Chill Rock</li>
+              <li>This is Eluvetie</li>
+            </ul>
+          </div>
+          <div class="footer-sidebar">
+            <div class="ft-side1">
+              <i class="far fa-arrow-alt-circle-down"></i>
+              <span>Installa App</span>
+            </div>
+            <hr>
+            <div class="ft-side2">
+              <i class="far fa-user-circle"></i>
+              <span><b>Claud-Car</b></span>
+            </div>
+          </div>
+        </div>
+      </aside>
+      <div class="main-page">
+        <div class="col-xs-10 col-sm-8 col-md-9 col-lg-9 top-bar">
+          <a href="#">EFFETTUA L'UPGRADE</a>
+        </div>
+        <div class="web-page">
+          <p>TEST</p>
+          <p>TEST</p>
+          <p>TEST</p>
+          <p>TEST</p>
+          <p>TEST</p>
+          <p>TEST</p>
+          <p>TEST</p>
+          <p>TEST</p>
+          <p>TEST</p>
+          <p>TEST</p>
+          <p>TEST</p>
+          <p>TEST</p>
+          <p>TEST</p>
+          <p>TEST</p>
+          <p>TEST</p>
+          <p>TEST</p>
+          <p>TEST</p>
+          <p>TEST</p>
+          <p>TEST</p>
+          <p>TEST</p>
+          <p>TEST</p>
+          <p>TEST</p>
+          <p>TEST</p>
+          <p>TEST</p>
+          <p>TEST</p>
+          <p>TEST</p>
+          <p>TEST</p>
+          <p>TEST</p>
+          <p>TEST</p>
+          <p>TEST</p>
+          <p>TEST</p>
+          <p>TEST</p>
         </div>
       </div>
-    </div>
   </main>
   <footer>
     <div class="player-bar">
