--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
   <link rel="stylesheet" href="./assets/css/master.css">
-  <title>Document</title>
+  <title>Spotify Web-Claud</title>
 </head>
 <body>
   <header>
@@ -39,8 +39,8 @@
               <li id="title-play"><b>Playlist</b></li>
               <li id="crea"><i class="fas fa-plus-square"></i><b>Crea Playlist</b></li>
               <li>Slipknot Claudio</li>
-              <li>Red Hot Chili Peppers Claudio</li>
-              <li>This is Creedence Clearwat...</li>
+              <li>Red Hot Chili Peppers</li>
+              <li>Creedence Clearwater</li>
               <li>Wake the fuck up Samurai</li>
               <li>This is Refused</li>
               <li>Chill Rock</li>
@@ -65,6 +65,14 @@
           <a href="#">EFFETTUA L'UPGRADE</a>
         </div>
         <div class="web-page">
+          <div class="menu">
+            <h5>IN EVIDENZA</h5>
+            <h5>PODCAST</h5>
+            <h5>CLASSIFICHE</h5>
+            <h5>GENERI E MOOD</h5>
+            <h5>NUOVE USCITE</h5>
+            <h5>SCOPRI</h5>
+          </div>
           <p>TEST</p>
           <p>TEST</p>
           <p>TEST</p>
