--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="col-xs-10 col-sm-8 col-md-9 col-lg-9 top-bar">
           <a href="#">EFFETTUA L'UPGRADE</a>
         </div>
-        <div class="web-page">
+        <div class="web-page container-fluid">
           <div class="menu">
             <h5>IN EVIDENZA</h5>
             <h5>PODCAST</h5>
@@ -73,38 +73,127 @@
             <h5>NUOVE USCITE</h5>
             <h5>SCOPRI</h5>
           </div>
-          <p>TEST</p>
-          <p>TEST</p>
-          <p>TEST</p>
-          <p>TEST</p>
-          <p>TEST</p>
-          <p>TEST</p>
-          <p>TEST</p>
-          <p>TEST</p>
-          <p>TEST</p>
-          <p>TEST</p>
-          <p>TEST</p>
-          <p>TEST</p>
-          <p>TEST</p>
-          <p>TEST</p>
-          <p>TEST</p>
-          <p>TEST</p>
-          <p>TEST</p>
-          <p>TEST</p>
-          <p>TEST</p>
-          <p>TEST</p>
-          <p>TEST</p>
-          <p>TEST</p>
-          <p>TEST</p>
-          <p>TEST</p>
-          <p>TEST</p>
-          <p>TEST</p>
-          <p>TEST</p>
-          <p>TEST</p>
-          <p>TEST</p>
-          <p>TEST</p>
-          <p>TEST</p>
-          <p>TEST</p>
+          <h2>Ascoltati di recente</h2>
+          <div class="box-container text-center">
+            <div class="box">
+              <div id="slipknot" class="container-img">
+                <i class="far fa-play-circle"></i>
+              </div>
+              <h3>Slipknot-claudio</h3>
+              <p>Di Claud-car</p>
+            </div>
+            <div class="box">
+              <div id="airbourne" class="container-img">
+                <i class="far fa-play-circle"></i>
+              </div>
+              <h3>Airbourne</h3>
+              <p>Di Claud-car</p>
+            </div>
+            <div class="box">
+              <div id="casey" class="container-img">
+                <i class="far fa-play-circle"></i>
+              </div>
+              <h3>Casey Neistat Vlog Soundtrack</h3>
+              <p>Di Claud-car</p>
+            </div>
+            <div class="box">
+              <div id="credence" class="container-img">
+                <i class="far fa-play-circle"></i>
+              </div>
+              <h3>This is Credence Clearwater Revival</h3>
+              <p>Di Claud-car</p>
+            </div>
+            <div class="box">
+              <div id="lordi" class="container-img">
+                <i class="far fa-play-circle"></i>
+              </div>
+              <h3>Lordi</h3>
+              <p>Di Lordi</p>
+            </div>
+            <div class="box">
+              <div id="samurai" class="container-img">
+                <i class="far fa-play-circle"></i>
+              </div>
+              <h3>Wake The F**k Up Samurai</h3>
+              <p>Di Claud-car</p>
+            </div>
+          </div>
+          <h2>Creato per Claud-car</h2>
+          <div class="box-container text-center">
+            <div class="box">
+              <div id="brani-pref" class="container-img">
+                <i class="far fa-play-circle"></i>
+              </div>
+              <h3>I tuoi brani preferiti del 2020</h3>
+              <p>Creato per te</p>
+            </div>
+            <div class="box">
+              <div id="daily1" class="container-img">
+                <i class="far fa-play-circle"></i>
+              </div>
+              <h3>Daily mix 1</h3>
+              <p>Creato per te</p>
+            </div>
+            <div class="box">
+              <div id="daily2" class="container-img">
+                <i class="far fa-play-circle"></i>
+              </div>
+              <h3>Daily mix 2</h3>
+              <p>Creato per te</p>
+            </div>
+            <div class="box">
+              <div id="daily3" class="container-img">
+                <i class="far fa-play-circle"></i>
+              </div>
+              <h3>Daily mix 3</h3>
+              <p>Creato per te</p>
+            </div>
+            <div class="box">
+              <div id="daily4" class="container-img">
+                <i class="far fa-play-circle"></i>
+              </div>
+              <h3>Daily mix 4</h3>
+              <p>Creato per te</p>
+            </div>
+          </div>
+          <h2>Artisti Popolari</h2>
+          <div class="box-container text-center">
+            <div class="box">
+              <div id="refused" class="container-img">
+                <i class="far fa-play-circle"></i>
+              </div>
+              <h3>Refused</h3>
+              <p>Di Refused</p>
+            </div>
+            <div class="box">
+              <div id="kiss" class="container-img">
+                <i class="far fa-play-circle"></i>
+              </div>
+              <h3>Kiss</h3>
+              <p>Di Kiss</p>
+            </div>
+            <div class="box">
+              <div id="red-hot" class="container-img">
+                <i class="far fa-play-circle"></i>
+              </div>
+              <h3>Red Hot Chili Peppers</h3>
+              <p>Di Red Hot Chili Peppers</p>
+            </div>
+            <div class="box">
+              <div id="refused" class="container-img">
+                <i class="far fa-play-circle"></i>
+              </div>
+              <h3>Refused</h3>
+              <p>Di Refused</p>
+            </div>
+            <div class="box">
+              <div id="lordi" class="container-img">
+                <i class="far fa-play-circle"></i>
+              </div>
+              <h3>Lordi</h3>
+              <p>Di Lordi</p>
+            </div>
+          </div>
         </div>
       </div>
   </main>
