--- a/index.html
+++ b/index.html
@@ -224,7 +224,9 @@
         <i class="fas fa-sliders-h"></i>
         <i class="fas fa-desktop"></i>
         <i class="fas fa-volume-up"></i>
-        <hr>
+        <hr>    
+        <i class="fas fa-step-backward for-back-right-part"></i>
+        <i class="fas fa-step-forward for-back-right-part"></i>
       </div>
     </div>
   </footer>
