Correzioni di sintassi,esercizio terminato,procedo ad altri vari bonus

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <i class="fab fa-spotify"></i>
             <span>SPOTIFY</span>
           </div>
-          <div class="icons-sidebar">
+            <div class="icons-sidebar">
             <div class="menu-sidebar">
               <i class="fas fa-home"></i>
               <a href="#">Home</a>
@@ -76,42 +76,42 @@
           <h2>Ascoltati di recente</h2>
           <div class="box-container text-center">
             <div class="box">
-              <div id="slipknot" class="container-img">
+              <div class="container-img slipknot">
                 <i class="far fa-play-circle"></i>
               </div>
               <h3>Slipknot-claudio</h3>
               <p>Di Claud-car</p>
             </div>
             <div class="box">
-              <div id="airbourne" class="container-img">
+              <div class="container-img airbourne">
                 <i class="far fa-play-circle"></i>
               </div>
               <h3>Airbourne</h3>
               <p>Di Claud-car</p>
             </div>
             <div class="box">
-              <div id="casey" class="container-img">
+              <div class="container-img casey">
                 <i class="far fa-play-circle"></i>
               </div>
               <h3>Casey Neistat Vlog Soundtrack</h3>
               <p>Di Claud-car</p>
             </div>
             <div class="box">
-              <div id="credence" class="container-img">
+              <div class="container-img credence">
                 <i class="far fa-play-circle"></i>
               </div>
               <h3>This is Credence Clearwater Revival</h3>
               <p>Di Claud-car</p>
             </div>
             <div class="box">
-              <div id="lordi" class="container-img">
+              <div class="container-img lordi">
                 <i class="far fa-play-circle"></i>
               </div>
               <h3>Lordi</h3>
               <p>Di Lordi</p>
             </div>
             <div class="box">
-              <div id="samurai" class="container-img">
+              <div class="container-img samurai">
                 <i class="far fa-play-circle"></i>
               </div>
               <h3>Wake The F**k Up Samurai</h3>
@@ -121,35 +121,35 @@
           <h2>Creato per Claud-car</h2>
           <div class="box-container text-center">
             <div class="box">
-              <div id="brani-pref" class="container-img">
+              <div class="container-img brani-pref">
                 <i class="far fa-play-circle"></i>
               </div>
               <h3>I tuoi brani preferiti del 2020</h3>
               <p>Creato per te</p>
             </div>
             <div class="box">
-              <div id="daily1" class="container-img">
+              <div class="container-img daily1">
                 <i class="far fa-play-circle"></i>
               </div>
               <h3>Daily mix 1</h3>
               <p>Creato per te</p>
             </div>
             <div class="box">
-              <div id="daily2" class="container-img">
+              <div class="container-img daily2">
                 <i class="far fa-play-circle"></i>
               </div>
               <h3>Daily mix 2</h3>
               <p>Creato per te</p>
             </div>
             <div class="box">
-              <div id="daily3" class="container-img">
+              <div class="container-img daily3">
                 <i class="far fa-play-circle"></i>
               </div>
               <h3>Daily mix 3</h3>
               <p>Creato per te</p>
             </div>
             <div class="box">
-              <div id="daily4" class="container-img">
+              <div class="container-img daily4">
                 <i class="far fa-play-circle"></i>
               </div>
               <h3>Daily mix 4</h3>
@@ -159,35 +159,35 @@
           <h2>Artisti Popolari</h2>
           <div class="box-container text-center">
             <div class="box">
-              <div id="refused" class="container-img">
+              <div class="container-img refused">
                 <i class="far fa-play-circle"></i>
               </div>
               <h3>Refused</h3>
               <p>Di Refused</p>
             </div>
             <div class="box">
-              <div id="kiss" class="container-img">
+              <div class="container-img kiss">
                 <i class="far fa-play-circle"></i>
               </div>
               <h3>Kiss</h3>
               <p>Di Kiss</p>
             </div>
             <div class="box">
-              <div id="red-hot" class="container-img">
+              <div class="container-img red-hot">
                 <i class="far fa-play-circle"></i>
               </div>
               <h3>Red Hot Chili Peppers</h3>
               <p>Di Red Hot Chili Peppers</p>
             </div>
             <div class="box">
-              <div id="refused" class="container-img">
+              <div class="container-img refused">
                 <i class="far fa-play-circle"></i>
               </div>
               <h3>Refused</h3>
               <p>Di Refused</p>
             </div>
             <div class="box">
-              <div id="lordi" class="container-img">
+              <div class="container-img lordi">
                 <i class="far fa-play-circle"></i>
               </div>
               <h3>Lordi</h3>
@@ -202,7 +202,7 @@
       <div class="col-xs-4 col-sm-3 left-part">
         <img src="./assets/img/nero-forte.png" alt="">
         <div class="song">
-          <a><b>Nero Forte</b><i class="far fa-heart"></a></i><br>
+          <a><b>Nero Forte</b><i class="far fa-heart"></i></a><br>
           <a>Slipknot</a>
         </div>
       </div>
@@ -224,7 +224,7 @@
         <i class="fas fa-sliders-h"></i>
         <i class="fas fa-desktop"></i>
         <i class="fas fa-volume-up"></i>
-        <hr>    
+        <hr>
         <i class="fas fa-step-backward for-back-right-part"></i>
         <i class="fas fa-step-forward for-back-right-part"></i>
       </div>
